Bug 1773192 - Referrer header missing after calling history.replaceState and clicking back button. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D149176